# rules_dotnet

./: WORKSPACE
dotnet/: defs.bzl
dotnet/private/: common.bzl
dotnet/private/rules/csharp/: BUILD.bazel  project.bzl
dotnet/private/rules/csharp/actions/: csharp_assembly.bzl
tools/dotnet2bazel/: BUILD.bazel  Directory.Packages.props  dotnet2bazel_dependencies.bzl  write_csproj.bzl  write_nuget_repo.bzl
tools/dotnet2bazel/src/DotnetBazel/: BUILD.bazel  DotnetBazel.csproj  Program.cs
tools/dotnet2bazel/src/DotnetBazel.Core/: BUILD.bazel  ConsoleLogger.cs  DependencyResolver.cs  DotnetBazel.Core.csproj  FileUtilities.cs  FrameworkDependencyResolver.cs  LocalPackageExtractor.cs  NugetRepositoryEntry.cs  NugetRepositoryEntryBuilder.cs  TransitiveDependencyResolver.cs
tools/dotnet2bazel/src/DotnetBazel/Ide/: IdeCommand.cs
tools/dotnet2bazel/src/DotnetBazel/Repository/: RepositoryCommand.cs  RepositoryCommandOutput.cs
tools/dotnet2bazel/src/DotnetBazel/Skaffold/: BinaryOutput.cs  LibraryOutput.cs  SkaffoldCommand.cs
